--- a/manifest.json
+++ b/manifest.json
@@ -24,8 +24,7 @@
     {
       "name": "charles-cook-book",
       "url": "/",
-      "description": "Charley New Bee Online Cookbook",
-      "icon": "/img/logo98px.png"         
+      "description": "Charley New Bee Online Cookbook"       
     }
     
   ],
